# model_rec2

./: CMakeLists.txt  Makefile  manifest.xml  package.xml
Recognition/: CMakeLists.txt  CMakeLists.txt_orig  README.lixing  README.original  main.cpp
Recognition/src/BasicTools/: CMakeLists.txt
Recognition/src/BasicTools/ComputationalGeometry/Algorithms/: RANSACPlaneDetector.cpp  RANSACPlaneDetector.h
Recognition/src/BasicTools/Functions/: CosSqrScalarField.h
Recognition/src/BasicTools/Intel_Compiler/: makefile  sources.mk
Recognition/src/BasicTools/Intel_Compiler/Aux/: NumberUtils.d  Stopwatch.d  StringUtils.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/ComputationalGeometry/Algorithms/: AuxCompGeom.d  OptimalTransformation.d  PCA.d  PCANormalEstimator.d  RANSACPlaneDetector.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/ComputationalGeometry/DataStructures/BSPTree/: BSPTree.d  BSPTreeNode.d  BSPTreeNodeData.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/ComputationalGeometry/DataStructures/KdTree/: KdTree.d  KdTreeNode.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/ComputationalGeometry/DataStructures/Octree/: Octree.d  OctreeNode.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/DataStructures/: Box.d  BoxStructure3d.d  LayeredPointSet.d  NdBoxStructure.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/Graph/: GraphNode.d  GraphNodeData.d  UndirectedGraph.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/Interpolation/: TPSVectorField3.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/LinearAlgebra/: AnalyticGeometry.d  CoordinateSystem.d  Matrix.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/Stochastics/: Noise.d  PointSampler.d  RandomGenerator.d  RigidTransformSampler.d  SphericalBoxSampler.d  SphericalPatchSampler.d  subdir.mk
Recognition/src/BasicTools/Intel_Compiler/Vtk/: VtkConvexHull2d.d  VtkCopy.d  VtkMeshSampler.d  VtkRMS.d  VtkTransform.d  subdir.mk
Recognition/src/ObjRecRANSAC/: ObjRecRANSAC.cpp  ObjRecRANSAC.h
Recognition/src/ObjRecRANSAC/DataStructures/ORROctree/: ORROctreeNodeData.h
Recognition/src/VtkBasics/: CMakeLists.txt
Recognition/src/VtkBasics/VtkGeometry/: VtkNormals.cpp  VtkNormals.h
Recognition/src/VtkBasics/VtkIO/: VtkOFFReader.cpp  VtkPNTReader.cpp  VtkSVSReader.cpp
Recognition/src/VtkBasics/VtkSource/: VtkBoxSource.cpp  VtkBoxSource.h  VtkCircleSource.cpp  VtkCircleSource.h  VtkCylinderSource.cpp  VtkCylinderSource.h  VtkLineSource.cpp  VtkLineSource.h
launch/: debug_modelrec.launch  model_rec2.launch
scripts/: model_rec_manager.py
src/: model_rec.cpp  model_rec.h  model_rec_server.cpp
srv/: FindObjects.srv  GenHypotheses.srv
